package in.itkaran.lld1130624.lld2.observer;

public interface Subscriber {
    public void update();
}
