classDiagram
    class Publisher {
        <<Interface>>
        + subscribe(Subscriber Subscriber)
        + unsubscribe(Subscriber Subscriber)
        + notifySubscribers()
    }

    class Subscriber {
        <<Interface>>
        + update()
    }

    class Amazon {
        - List~Subscriber~ subscribers
    }

    Publisher <|-- Amazon : implements
    Amazon o-- Subscriber : has


    Subscriber <|-- EmailService : implements
    Subscriber <|-- SmsService : implements
    Subscriber <|-- InventoryService : implements